--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/jest": "^24.0.22",
+    "axios": "^0.21.1",
     "jest": "^24.9.0",
     "ts-jest": "^24.1.0",
     "tsc": "^1.20150623.0",
