--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/jest": "^24.0.22",
     "axios": "^0.21.1",
     "jest": "^24.9.0",
+    "jsonwebtoken": "^8.5.1",
     "ts-jest": "^24.1.0",
     "tsc": "^1.20150623.0",
     "typescript": "^3.7.2"
